# cv-submission-automator

./: .gitignore  .pylintrc  README.md  lambda_function.py  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
backend/: google-credentials.json.encrypted  lambda_function.py  pyproject.toml  requirements.txt
backend/models/: cv_parser.py
backend/tests/: test_cv_parser.py  test_lambda_function.py  test_mail_service.py  test_mail_service_sg.py  test_update_sheet.py
backend/utils/: mail_service.py  mail_service_sg.py  updateSheet.py  update_sheet.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/lib/: UploadForm.tsx
middleman/: get_presigned_url.py  pyproject.toml
models/: cv_parser.py
terraform/: backend.tf  buildspec.yml  frontend.tf  main.tf  middleman.tf  output.tf  shared.tf  tfplan  variables.tf
tests/: test_cv_parser.py
