[project]
name = "cv-details-extractor"
version = "0.1.0"
description = "A CV details extractor for screening purposes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.6",
    "pypdf>=5.3.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.4",
]
